--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,17 @@
 <html>
 <head>
-	<title></title>
+	<title>Kinect Synthesizer!</title>
+	<link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
 
+<h1>Kinect Synthesizer!</h1>
+
+<canvas>
+
+</canvas>
+
 </body>
+<script src="scripts/tuna.js"></script>
+<script src="scripts/main.js"></script>
 </html>
