minor styling change

--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 
-<div id="page-wrapper" class="clearfix">
+<div id="page-wrapper" class="page-wrapper clearfix">
 
 	<h1>Kinect Synthesizer!</h1>
 
-	<canvas id="synth-pad"></canvas>
-	<div id="info">
-		<h1>Web Audio Synth Pad</h1>
+	<canvas id="synth-pad" class="synth-pad"></canvas>
+	<div id="info" class="info">
+		<h2>Web Audio Synth Pad</h2>
 		<p>
 			Click and drag the mouse over the synthesizer pad to generate a sound.
 		</p>
