correct path to tuna

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,6 @@
 </div>
 
 </body>
-<script src="scripts/tuna.js"></script>
+<script src="scripts/vendor/tuna.js"></script>
 <script src="scripts/main.js"></script>
 </html>
