--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Kinect Synthesizer!</title>
 	<link rel="stylesheet" href="css/main.css"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body>
 
